<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <ListPreference
        android:defaultValue="@string/yandere_uri"
        android:entries="@array/provider_names"
        android:entryValues="@array/provider_values"
        android:key="@string/provider_key"
        android:title="@string/content_provider"/>
    <SwitchPreference
        android:defaultValue="true"
        android:key="@string/auto_download_key"
        android:summary="@string/auto_download_summary"
        android:title="@string/auto_download"/>
    <SwitchPreference
        android:defaultValue="true"
        android:key="@string/float_search_key"
        android:summary="@string/float_search_summary"
        android:title="@string/float_search"/>
    <SwitchPreference
        android:defaultValue="true"
        android:key="@string/float_favorite_key"
        android:summary="@string/float_favorite_summary"
        android:title="@string/float_favorite"/>
    <SwitchPreference
        android:defaultValue="true"
        android:key="@string/auto_rotate_key"
        android:summary="@string/auto_rotate_summary"
        android:title="@string/auto_rotate"/>
    <Preference
        android:key="project"
        android:summary="@string/project_url"
        android:title="@string/project_title">
        <intent
            android:action="android.intent.action.VIEW"
            android:data="@string/project_url"/>
    </Preference>
    <PreferenceScreen
        android:title="@string/about">
        <Preference
            android:key="developer"
            android:summary="@string/developer_summary"
            android:title="@string/developer"/>
        <Preference
            android:key="license"
            android:summary=""
            android:title="@string/license">
            <intent android:action="moe.kurumi.moegallery.action.VIEW_LICENSES"/>
        </Preference>
        <Preference
            android:key="feedback"
            android:summary="@string/feedback_url"
            android:title="@string/feedback_title">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/feedback_url"/>
        </Preference>
        <Preference
            android:key="@string/version_key"
            android:summary=""
            android:title="@string/version"/>
    </PreferenceScreen>
</PreferenceScreen>