<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/details_text"
                android:text="@string/image_name"/>

            <TextView
                android:id="@+id/name"
                style="@style/details_value"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/details_text"
                android:text="@string/image_resolution"/>

            <TextView
                android:id="@+id/resolution"
                style="@style/details_value"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/details_text"
                android:text="@string/image_size"/>

            <TextView
                android:id="@+id/size"
                style="@style/details_value"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/details_text"
                android:text="@string/image_type"/>

            <TextView
                android:id="@+id/type"
                style="@style/details_value"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/details_text"
                android:text="@string/image_count"/>

            <TextView
                android:id="@+id/count"
                style="@style/details_value"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/details_text"
                android:text="@string/image_user"/>

            <TextView
                android:id="@+id/user"
                style="@style/details_value"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_margin="10dp"
                android:gravity="center_vertical"
                android:text="@string/image_tags"/>

            <org.apmem.tools.layouts.FlowLayout
                android:id="@+id/tags"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>